feat(children): Deal the function type of children

--- a/examples/test.html
+++ b/examples/test.html
@@ -47,7 +47,10 @@ function Comp(props) {
       cr(ReactPopper.default, {
         ref: popper,
         trigger: ReactPopper.TriggerType.hover,
-      }, 'popper'),
+      }, (props) => {
+        window.popperRef = props.popperRef
+        return 'popper'
+      }),
     ]
   )
 }
