--- a/examples/test.html
+++ b/examples/test.html
@@ -18,6 +18,7 @@
 
     #module {
       position: relative;
+      width: 50vw;
     }
 
     .react-popper {
@@ -59,8 +60,9 @@ function Comp(props) {
       cr(ReactPopper.default, {
         ref: popper,
         trigger: ReactPopper.TriggerType.hover,
+        forceShow: true,
         placement: 'bottom-start',
-        arrowPosition: 'end',
+        arrowPosition: 'middle',
       }, (props) => {
         window.popperRef = props.popperRef
         return 'popper'
@@ -71,13 +73,13 @@ function Comp(props) {
 
 ReactDOM.render(cr(Comp), module)
 
-let x = 0
-const timer = setInterval(() => {
-  document.getElementById('module').setAttribute('style', `left: ${x += 10}px`)
-  if(x > 100) {
-    clearInterval(timer)
-  }
-}, 1000)
+// let x = 0
+// const timer = setInterval(() => {
+//   document.getElementById('module').setAttribute('style', `left: ${x += 10}px`)
+//   if(x > 100) {
+//     clearInterval(timer)
+//   }
+// }, 1000)
 </script>
 </body>
 </html>
