--- a/examples/test.html
+++ b/examples/test.html
@@ -19,6 +19,8 @@
     #module {
       position: relative;
       width: 50vw;
+      padding: 0 10px;
+      background: #aaa;
     }
 
     .react-popper {
