--- a/examples/test.html
+++ b/examples/test.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ReactPopper</title>
-  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+  <script src="https://cdn.bootcss.com/react/16.9.0/umd/react.development.js" crossorigin></script>
+  <script src="https://cdn.bootcss.com/react-dom/16.9.0/umd/react-dom.development.js" crossorigin></script>
   <script src="../lib/umd/index.js"></script>
   <link rel="stylesheet" href="../lib/css/index.css">
   <style>
@@ -13,7 +13,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      width: 200vw;
+      height: 200vh;
     }
 
     #module {
@@ -48,6 +49,7 @@ function Comp(props) {
         // popper.current.setState({visible: true})
         popper.current.show()
         console.log(popper.current, popper.current.eventName)
+        window.popper = popper.current
       }
     }, 1000)
   }, [])
@@ -61,7 +63,7 @@ function Comp(props) {
       'parent',
       cr(ReactPopper.default, {
         ref: popper,
-        trigger: ReactPopper.TriggerType.hover,
+        trigger: ReactPopper.TriggerType.click,
         // forceShow: true,
         placement: 'bottom-start',
         arrowPosition: 'middle',
