--- a/examples/test.html
+++ b/examples/test.html
@@ -63,11 +63,12 @@ function Comp(props) {
       'parent',
       cr(ReactPopper.default, {
         ref: popper,
-        trigger: ReactPopper.TriggerType.click,
+        trigger: ReactPopper.TriggerType.hover,
         // forceShow: true,
         placement: 'bottom-start',
         arrowPosition: 'middle',
         afterToggle: console.log,
+        delayHide: 200,
       }, (props) => {
         window.popperRef = props.popperRef
         return 'popper'
